# free-gpt

./: .gitignore  README.md  iam.tf  main.tf  outputs.tf  scheduler.tf  storage.tf  variables.tf
function_sources/: main.py
mercury/: README.md  main.py  pyproject.toml  requirements.txt
mercury/mercury/: base_bigquery_client.py  bigquery_client.py  dto.py  main.py  openai_client.py  settings.py  ssh_client.py  utils.py
mercury/playground/: compress.ipynb  compression_testing.ipynb  papiez.ipynb
mercury/tests/: main_test.py  test_bigquery_client.py  test_openai_client.py  test_ssh_client.py  test_utils.py
terraform/: bigquery.tf  compute.tf  iam.tf  main.tf  pubsub.tf  scheduler.tf  secrets.tf  storage.tf  variables.tf
