[tool.poetry]
name = "mercury"
version = "0.1.0"
description = ""
authors = ["Oskar Korczak <oskar.korczak@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-storage = "^2.7.0"
requests = "^2.28.2"
openai = "^0.27.2"
paramiko = "^3.1.0"
google-cloud-bigquery = "^3.9.0"
pydantic = "^1.10.7"
tiktoken = "^0.3.3"
types-paramiko = "^3.0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
python-dotenv = {extras = ["cli"], version = "^1.0.0"}
black = "^23.3.0"
pytest-mock = "^3.10.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
